Move shared DTOs to common
