# bot/src/main/java/by/yayauheny/tutochkatgbot/dto/backend/GenderType.java
@@ -1,11 +1,0 @@
-package by.yayauheny.tutochkatgbot.dto.backend;
-
-/**
- * Gender type enum
- */
-public enum GenderType {
-    MEN,
-    WOMEN,
-    UNISEX,
-    UNKNOWN
-}
