# common/src/main/kotlin/yayauheny/by/model/dto/Coordinates.kt
@@ -2,9 +2,8 @@ package yayauheny.by.model.dto
 
 import kotlinx.serialization.Serializable
 
-@ConsistentCopyVisibility
 @Serializable
-data class Coordinates private constructor(
+data class Coordinates(
     val lat: Double,
     val lon: Double
 ) {
